WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256311
RetainPtr<>::leakRef() should have NS/CF_RETURNS_RETAINED attributes
https://bugs.webkit.org/show_bug.cgi?id=256311
Summary
RetainPtr<>::leakRef() should have NS/CF_RETURNS_RETAINED attributes
David Kilzer (:ddkilzer)
Reported
2023-05-04 09:07:46 PDT
RetainPtr<>::leakRef() should have NS/CF_RETURNS_RETAINED attributes. This will let the clang static analyzer do a better job of detecting leaks. The trick to making this work is using `template<typename U = T>` to allow for template specialization and SFINAE without using the template type (`T`) for the entire class, as noted here: <
https://stackoverflow.com/questions/11531989/what-happened-to-my-sfinae-redux-conditional-template-class-members
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-04 09:08:11 PDT
<
rdar://problem/108895655
>
David Kilzer (:ddkilzer)
Comment 2
2023-05-04 11:42:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13451
EWS
Comment 3
2023-05-05 18:58:03 PDT
Committed
263742@main
(611c1a1ceeaf): <
https://commits.webkit.org/263742@main
> Reviewed commits have been landed. Closing PR #13451 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug